new file:   Common/DTO/centriatcpserverdto.cpp 	new file:   Common/DTO/centriatcpserverdto.h 	new file:   Common/centriatcpclientconnection.cpp 	new file:   Common/centriatcpclientconnection.h 	new file:   Common/centriatcpserver.cpp 	new file:   Common/centriatcpserver.h 	modified:   Services/SmartCampusService/DTO/centriascservicedto.cpp 	modified:   Services/SmartCampusService/DTO/centriascservicedto.h 	modified:   Services/SmartCampusService/SmartCampusService.pro 	modified:   Services/SmartCampusService/centriascservice.cpp 	modified:   Services/SmartCampusService/centriascservice.h 	modified:   Services/SmartCampusService/config.ini

--- a/Services/SmartCampusService/config.ini
+++ b/Services/SmartCampusService/config.ini
@@ -1,6 +1,7 @@
 [CentriaSCService]
 FastCGIListener="CentriaSCFastCGILister8000"
 PlatformClient="CentriaSCPlatformClient"
+CentriaTCPServer = "CentriaTCPServer40101"
 
 [CentriaSCFastCGILister8000]
 TCPPort = 8000
@@ -9,3 +10,6 @@ TCPPort = 8000
 IPAddress="192.168.8.118"
 Port=443
 AcceptSelfSignedCertificates=true
+
+[CentriaTCPServer40101]
+TCPPort=40101
