--- a/Services/SmartCampusService/config.ini
+++ b/Services/SmartCampusService/config.ini
@@ -1,7 +1,8 @@
 [CentriaSCService]
 FastCGIListener="CentriaSCFastCGILister8000"
 PlatformClient="CentriaSCPlatformClient"
-CentriaTCPServer = "CentriaTCPServer40101"
+#CentriaTCPServer = "CentriaTCPServer40101"
+CentriaTCPClient = "CentriaTCPClientTest";
 
 [CentriaSCFastCGILister8000]
 TCPPort = 8000
@@ -13,3 +14,8 @@ AcceptSelfSignedCertificates=true
 
 [CentriaTCPServer40101]
 TCPPort=40101
+
+[CentriaTCPClientTest]
+IPAddress="192.168.8.117"
+Port=40101
+
