modified:   IoTPlatform/CentriaIoTPlatformUI/CentriaIoTPlatformUI.pro 	modified:   IoTPlatform/CentriaIoTPlatformUI/centriasqlconnection.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/centriasqlconnection.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/config.ini 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatehierarchyitem.cpp 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatehierarchyitem.h 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatehierarchyitem.ui 	deleted:    IoTPlatform/CentriaIoTPlatformUI/dialogcreateobject.cpp 	deleted:    IoTPlatform/CentriaIoTPlatformUI/dialogcreateobject.h 	deleted:    IoTPlatform/CentriaIoTPlatformUI/dialogcreateobject.ui 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateobjectlink.cpp 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateobjectlink.h 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateobjectlink.ui 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui

--- a/IoTPlatform/CentriaIoTPlatformUI/config.ini
+++ b/IoTPlatform/CentriaIoTPlatformUI/config.ini
@@ -6,9 +6,9 @@ CentriaSQLConnection = "SmartCampusMySQL"
 TCPPort = 8000
 
 [SmartCampusMySQL]
-MySQLHostName = "127.0.0.1"
+MySQLHostName = "192.168.8.115"
 MySQLDatabaseName = "SmartCampus"
-MySQLUserName= "root"
-MySQLPassword = "laurea1"
+MySQLUserName= "centria"
+MySQLPassword = "centria1"
 
 
