modified:   IoTPlatform/CentriaIoTPlatformUI/CentriaIoTPlatformUI.pro 	new file:   IoTPlatform/CentriaIoTPlatformUI/Entities/sqlattribute.h 	new file:   IoTPlatform/CentriaIoTPlatformUI/Entities/sqlattributevalue.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/centriasqlconnection.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/centriasqlconnection.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/config.ini 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogaddattribute.cpp 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogaddattribute.h 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogaddattribute.ui 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateattribute.cpp 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateattribute.h 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreateattribute.ui 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatenewobject.cpp 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatenewobject.h 	new file:   IoTPlatform/CentriaIoTPlatformUI/dialogcreatenewobject.ui 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.cpp 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.h 	modified:   IoTPlatform/CentriaIoTPlatformUI/mainwindow.ui 	modified:   Services/SmartCampusService/centriascservice.cpp

--- a/IoTPlatform/CentriaIoTPlatformUI/config.ini
+++ b/IoTPlatform/CentriaIoTPlatformUI/config.ini
@@ -6,7 +6,8 @@ CentriaSQLConnection = "SmartCampusMySQL"
 TCPPort = 8000
 
 [SmartCampusMySQL]
-MySQLHostName = "192.168.8.115"
+#MySQLHostName = "192.168.8.115"
+MySQLHostName = "127.0.0.1"
 MySQLDatabaseName = "SmartCampus"
 MySQLUserName= "centria"
 MySQLPassword = "centria1"
